# RHEIA

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  manifest.in  pyproject.toml  run_pce.py  setup.cfg  setup.py
docs/: requirements.txt
docs/examples/: README.rst  plot_p2p_belgium.py
docs/sphinx/: API.rst  bibliography.rst  conf.py  connecting your own model.rst  contribution.rst  energy system models.rst  functionalities.rst  glossary.rst  index.rst  installation.rst  methods.rst  mybibfile.bib  optimization.rst  optimization.rst.bak  stochastic design space.rst  tutorial.rst  tutorial.rst.bak  uncertainty quantification.rst  uncertainty quantification.rst.bak  whatsnew.rst
examples/: run_optimization_four_bar_truss.py  run_uq_four_bar_truss.py  run_uq_h2_fuel.py  run_uq_no_model_create_only_samples.py
paper/: paper.bib  paper.md
rheia/: LICENSE  __init__.py  output.doc
rheia/CASES/: determine_stoch_des_space.py
rheia/CASES/CASE1/: case_description.py  design_space  stochastic_space
rheia/CASES/ENERGYPLAN/: case.txt  case_description.py  design_space  design_space.csv  run_energyplan.py  stochastic_space  stochastic_space.csv
rheia/CASES/ENERGYSCOPE/: case_description.py  config_ref_UQ.yaml  design_space  design_space.csv  design_space_ref.csv  stochastic_space  stochastic_space.csv  uq_estd.py
rheia/CASES/FOUR_BAR_TRUSS/: case_description.py  design_space  design_space.csv  design_space_uq.csv  four_bar_truss.py  stochastic_space  stochastic_space.csv
rheia/CASES/H2_FUEL/: case_description.py  design_space  design_space.csv  design_space_tutorial_0  design_space_tutorial_0.csv  design_space_tutorial_1  design_space_tutorial_1.csv  design_space_tutorial_10  design_space_tutorial_10.csv  design_space_tutorial_11  design_space_tutorial_11.csv  design_space_tutorial_12  design_space_tutorial_12.csv  (+35 more)
rheia/OPT/: genetic_algorithms.py  optimization.py
rheia/POST_PROCESS/: lib_post_process.py  post_process.py
rheia/TESTS/: run_tests.py  test_det_stoch_des_space.py  test_genetic_algorithms.py  test_models.py  test_optimization.py  test_optimization_fbt.py  test_optimization_h2_mobility.py  test_optimization_pv_elec.py  test_optimization_pv_h2.py  test_pce.py  test_post_process.py  test_uncertainty_quantification.py  test_uq_fbt.py  test_uq_no_model.py  test_uq_pv_elec.py  test_uq_pv_h2.py  test_workflows.py
rheia/UQ/: pce.py  sobol_mod.py  uncertainty_quantification.py
(+1299 files in other folders)
